Removed Interfaces namespace, interfaces should be in Vts.MonteCarlo namespace. Created PostProcessorInput class that houses input needed for postprocessing, both regular and pMC. Modified PostProcessor/Program to read input file, from it read database and SimulationInput that gen'ed the database and generate tally results.
--HG--
branch : dc-110405-database_refactoring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -718,6 +718,9 @@
     <Compile Include="..\Vts\MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs">
       <Link>MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\PostProcessing\PostProcessorInput.cs">
+      <Link>MonteCarlo\PostProcessing\PostProcessorInput.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Sources\CollimatedLineSource.cs">
       <Link>MonteCarlo\Sources\CollimatedLineSource.cs</Link>
     </Compile>
