Completed Elliptical Sources: Custom, DivergingConvergingOrCollimated
--HG--
branch : dc-110311-source_restructuring

--- a/src/Vts/Vts.csproj
+++ b/src/Vts/Vts.csproj
@@ -305,55 +305,24 @@
     <Compile Include="MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs" />
     <Compile Include="Common\Extension Methods\RNGExtensions.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceFlags.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceConvergingFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceConvergingGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceCustomFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceCustomGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceDivergingFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceDivergingGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceHemiSphericalFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceHemiSphericalGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceWithNAFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceWithNAGaussian.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\EllipticalSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\ConvergingDivergingOrCollimatedEllipticalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\EllipticalSources\CustomEllipticalSource.cs" />
+    <Compile Include="MonteCarlo\Sources\LineSources\IsotropicLineSource.cs" />
     <Compile Include="MonteCarlo\Sources\LineSources\LineSourceBase.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\DirectionalLineSource.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceCollimatedGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceConvergingGaussian.cs" />
+    <Compile Include="MonteCarlo\Sources\LineSources\ConvergingDivergingOrCollimatedLineSource.cs" />
     <Compile Include="MonteCarlo\Sources\LineSources\CustomLineSource.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceDivergingGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceHemiSphericalGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceWithNAGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceConvergingFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceWithNAFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\PointSources\PointSourceHemiSpherical.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceCollimatedFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceDivergingFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceCustomFlat.cs">
+    <Compile Include="MonteCarlo\Sources\PointSources\PointSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\PointSources\DirectionalPointSource.cs" />
+    <Compile Include="MonteCarlo\Sources\PointSources\CustomPointSource.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MonteCarlo\Sources\LineSources\LineSourceHemiSphericalFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\PointSources\PointSourceCollimated.cs" />
-    <Compile Include="MonteCarlo\Sources\PointSources\PointSourceCustom.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="MonteCarlo\Sources\PointSources\PointSourceIsotropic.cs" />
-    <Compile Include="MonteCarlo\Sources\PointSources\PointSourceWithNA.cs" />
+    <Compile Include="MonteCarlo\Sources\PointSources\IsotropicPointSource.cs" />
     <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\CuboidalSurfaceEmmitingSourceFlat.cs" />
     <Compile Include="MonteCarlo\Sources\SurfaceEmittingSources\CuboidalSurfaceEmmitingSourceCustomFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceCollimatedFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceCollimatedGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceConvergingFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceConvergingGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceCustomFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceCustomGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceDivergingFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceDivergingGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceHemiSphericalFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceHemiSphericalGaussian.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceWithNAFlat.cs" />
-    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceWithNAGaussian.cs" />
+    <Compile Include="MonteCarlo\Sources\RectangularSources\RectangularSourceBase.cs" />
+    <Compile Include="MonteCarlo\Sources\RectangularSources\ConvergingDivergingOrCollimatedRectangularSource.cs" />
+    <Compile Include="MonteCarlo\Sources\RectangularSources\CustomRectangularSource.cs" />
     <Compile Include="MonteCarlo\Helpers\SourceToolbox.cs" />
     <Compile Include="MonteCarlo\Sources\SourceProfiles\Gaussian3DSourceProfile.cs" />
     <Compile Include="MonteCarlo\Sources\SourceProfiles\Gaussian2DSourceProfile.cs" />
