--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -709,131 +709,47 @@
     <Compile Include="..\Vts\MonteCarlo\Sources\CustomPointSourceInputOld.cs">
       <Link>MonteCarlo\Sources\CustomPointSourceInputOld.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedFlat.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedFlat.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\ConvergingDivergingOrCollimatedEllipticalSource.cs">
+      <Link>MonteCarlo\Sources\EllipticalSources\ConvergingDivergingOrCollimatedEllipticalSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedGaussian.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceCollimatedGaussian.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\CustomEllipticalSource.cs">
+      <Link>MonteCarlo\Sources\EllipticalSources\CustomEllipticalSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceConvergingFlat.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceConvergingFlat.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceBase.cs">
+      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceBase.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceConvergingGaussian.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceConvergingGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceCustomFlat.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceCustomFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceCustomGaussian.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceCustomGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceDivergingFlat.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceDivergingFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceDivergingGaussian.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceDivergingGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceHemiSphericalFlat.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceHemiSphericalFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceHemiSphericalGaussian.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceHemiSphericalGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceWithNAFlat.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceWithNAFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\EllipticalSources\EllipticalSourceWithNAGaussian.cs">
-      <Link>MonteCarlo\Sources\EllipticalSources\EllipticalSourceWithNAGaussian.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\ConvergingDivergingOrCollimatedLineSource.cs">
+      <Link>MonteCarlo\Sources\LineSources\ConvergingDivergingOrCollimatedLineSource.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\CustomLineSource.cs">
       <Link>MonteCarlo\Sources\LineSources\CustomLineSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\DirectionalLineSource.cs">
-      <Link>MonteCarlo\Sources\LineSources\DirectionalLineSource.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\IsotropicLineSource.cs">
+      <Link>MonteCarlo\Sources\LineSources\IsotropicLineSource.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceBase.cs">
       <Link>MonteCarlo\Sources\LineSources\LineSourceBase.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceCollimatedFlat.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceCollimatedFlat.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\PointSources\CustomPointSource.cs">
+      <Link>MonteCarlo\Sources\PointSources\CustomPointSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceCollimatedGaussian.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceCollimatedGaussian.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\PointSources\DirectionalPointSource.cs">
+      <Link>MonteCarlo\Sources\PointSources\DirectionalPointSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceConvergingFlat.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceConvergingFlat.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\PointSources\IsotropicPointSource.cs">
+      <Link>MonteCarlo\Sources\PointSources\IsotropicPointSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceConvergingGaussian.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceConvergingGaussian.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\PointSources\PointSourceBase.cs">
+      <Link>MonteCarlo\Sources\PointSources\PointSourceBase.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceCustomFlat.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceCustomFlat.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\ConvergingDivergingOrCollimatedRectangularSource.cs">
+      <Link>MonteCarlo\Sources\RectangularSources\ConvergingDivergingOrCollimatedRectangularSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceDivergingFlat.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceDivergingFlat.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\CustomRectangularSource.cs">
+      <Link>MonteCarlo\Sources\RectangularSources\CustomRectangularSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceDivergingGaussian.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceDivergingGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceHemiSphericalFlat.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceHemiSphericalFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceHemiSphericalGaussian.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceHemiSphericalGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceWithNAFlat.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceWithNAFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\LineSources\LineSourceWithNAGaussian.cs">
-      <Link>MonteCarlo\Sources\LineSources\LineSourceWithNAGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\PointSources\PointSourceCollimated.cs">
-      <Link>MonteCarlo\Sources\PointSources\PointSourceCollimated.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\PointSources\PointSourceCustom.cs">
-      <Link>MonteCarlo\Sources\PointSources\PointSourceCustom.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\PointSources\PointSourceHemiSpherical.cs">
-      <Link>MonteCarlo\Sources\PointSources\PointSourceHemiSpherical.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\PointSources\PointSourceIsotropic.cs">
-      <Link>MonteCarlo\Sources\PointSources\PointSourceIsotropic.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\PointSources\PointSourceWithNA.cs">
-      <Link>MonteCarlo\Sources\PointSources\PointSourceWithNA.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceCollimatedFlat.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceCollimatedFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceCollimatedGaussian.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceCollimatedGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceConvergingFlat.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceConvergingFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceConvergingGaussian.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceConvergingGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceCustomFlat.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceCustomFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceCustomGaussian.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceCustomGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceDivergingFlat.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceDivergingFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceDivergingGaussian.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceDivergingGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceHemiSphericalGaussian.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceHemiSphericalGaussian.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceWithNAFlat.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceWithNAFlat.cs</Link>
-    </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceWithNAGaussian.cs">
-      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceWithNAGaussian.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\RectangularSources\RectangularSourceBase.cs">
+      <Link>MonteCarlo\Sources\RectangularSources\RectangularSourceBase.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Sources\SourceProfiles\FlatSourceProfile.cs">
       <Link>MonteCarlo\Sources\SourceProfiles\FlatSourceProfile.cs</Link>
