--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -769,23 +769,32 @@
     <Compile Include="..\Vts\MonteCarlo\Sources\SurfaceEmittingSources\CuboidalSurfaceEmmitingSourceFlat.cs">
       <Link>MonteCarlo\Sources\SurfaceEmittingSources\CuboidalSurfaceEmmitingSourceFlat.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\SurfaceEmittingSources\SphericalSurfaceEmmitingSourceCustomFlat.cs">
-      <Link>MonteCarlo\Sources\SurfaceEmittingSources\SphericalSurfaceEmmitingSourceCustomFlat.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\SurfaceEmittingSources\CustomSphericalSurfaceEmittingSource.cs">
+      <Link>MonteCarlo\Sources\SurfaceEmittingSources\CustomSphericalSurfaceEmittingSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\SurfaceEmittingSources\SphericalSurfaceEmmitingSourceFlat.cs">
-      <Link>MonteCarlo\Sources\SurfaceEmittingSources\SphericalSurfaceEmmitingSourceFlat.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\SurfaceEmittingSources\IsotrpicSphericalSurfaceEmmitingSource.cs">
+      <Link>MonteCarlo\Sources\SurfaceEmittingSources\IsotrpicSphericalSurfaceEmmitingSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\CuboidalSourceFlatIsotropic.cs">
-      <Link>MonteCarlo\Sources\VolumetricSources\CuboidalSourceFlatIsotropic.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\SurfaceEmittingSources\SphericalSurfaceEmittingSourceBase.cs">
+      <Link>MonteCarlo\Sources\SurfaceEmittingSources\SphericalSurfaceEmittingSourceBase.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\CuboidalSourceGaussianIsotropic.cs">
-      <Link>MonteCarlo\Sources\VolumetricSources\CuboidalSourceGaussianIsotropic.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\CuboidalSourceBase.cs">
+      <Link>MonteCarlo\Sources\VolumetricSources\CuboidalSourceBase.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\EllipsoidalSourceFlatIsotropic.cs">
-      <Link>MonteCarlo\Sources\VolumetricSources\EllipsoidalSourceFlatIsotropic.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\CustomCuboidalSource.cs">
+      <Link>MonteCarlo\Sources\VolumetricSources\CustomCuboidalSource.cs</Link>
     </Compile>
-    <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\EllipsoidalSourceGaussianIsotropic.cs">
-      <Link>MonteCarlo\Sources\VolumetricSources\EllipsoidalSourceGaussianIsotropic.cs</Link>
+    <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\CustomEllipsoidalSource.cs">
+      <Link>MonteCarlo\Sources\VolumetricSources\CustomEllipsoidalSource.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\EllipsoidalSourceBase.cs">
+      <Link>MonteCarlo\Sources\VolumetricSources\EllipsoidalSourceBase.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\IsotropicCuboidalSource.cs">
+      <Link>MonteCarlo\Sources\VolumetricSources\IsotropicCuboidalSource.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Sources\VolumetricSources\IsotropicEllipsoidalSource.cs">
+      <Link>MonteCarlo\Sources\VolumetricSources\IsotropicEllipsoidalSource.cs</Link>
     </Compile>
     <Compile Include="..\Vts\MonteCarlo\Tissues\CylinderRegion.cs">
       <Link>MonteCarlo\Tissues\CylinderRegion.cs</Link>
