Updated PhotonStateType to be bit map.  Modified all that used to check PhotonStateType to now check bit map.  This was in a lot of places and of varying types, so wanted to ease flipping of bits (see next item). Added EnumExtensions to Add (turn on bit), Remove (turn off bit), Is (check if map of certain type) and Has (check if type included).  I got these off the web but needed to edit them to work.  Work unit tests to verify my changes. Added PhotonStateType (PST) to CustomPointSource and CustomPointSourceInput.  If PST set to OnBoundary, then photon does not go through Fresnel check.  If PST set to Alive or None, photon goes through Fresnel. Modified Photon to handle this flag.  If PST not OnBoundary, then Photon determines region just behind it and starts transport from there.  So far logic and regular MC loop seems to work fine for this case. In an unrelated topic, noticed that PhaseFunctionType was not part of Tissue Base and think it should be, so added it and to tissue types that derive from TissueBase. No MC unit tests passing currently because additional RNG call now and so my biographies don't match the linux.  I didn't want to update the unit tests until I was sure this design is stable.  For this reason I am pushing to a branch.
--HG--
branch : ch-110322-transport_of_source_restructuring

--- a/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
+++ b/src/Vts.Desktop.Test/Vts.Desktop.Test.csproj
@@ -110,8 +110,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\Vts.Test\Common\ArrayExtensionsTests.cs">
-      <Link>Common\ArrayExtensionsTests.cs</Link>
+    <Compile Include="..\Vts.Test\Common\ExtensionMethods\ArrayExtensionsTests.cs">
+      <Link>Common\ExtensionMethods\ArrayExtensionsTests.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts.Test\Common\ExtensionMethods\EnumExtensionsTests.cs">
+      <Link>Common\ExtensionMethods\EnumExtensionsTests.cs</Link>
     </Compile>
     <Compile Include="..\Vts.Test\Common\Helpers\Range\DoubleRangeTests.cs">
       <Link>Common\Helpers\Range\DoubleRangeTests.cs</Link>
