Added circular sources to include annular sources
--HG--
branch : dc-110311-source_restructuring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -706,6 +706,15 @@
     <Compile Include="..\Vts\MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs">
       <Link>MonteCarlo\PostProcessing\PhotonTerminationDatabasePostProcessor.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Sources\CircularSources\CircularSourceBase.cs">
+      <Link>MonteCarlo\Sources\CircularSources\CircularSourceBase.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Sources\CircularSources\CustomCircularSource.cs">
+      <Link>MonteCarlo\Sources\CircularSources\CustomCircularSource.cs</Link>
+    </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Sources\CircularSources\DirectionalCircularSource.cs">
+      <Link>MonteCarlo\Sources\CircularSources\DirectionalCircularSource.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Sources\CustomPointSourceInputOld.cs">
       <Link>MonteCarlo\Sources\CustomPointSourceInputOld.cs</Link>
     </Compile>
