Added Specular detector. Changed parameter in SourceInput and Source from PhotonStateType to int called Updated Photon with new parameter. StartingRegionIndex indicating which tissue region the photon should start in. Change g in air to be 1.0 instead of 0 in all programs. Modified CrossRegionOrReflect in Photon to not handle setting of ExitedOutTop or ExitedOutBottom.  Still need to figure out how to determine this in some other part of the code.
--HG--
branch : ch-110322-transport_of_source_restructuring

--- a/src/Vts.Desktop/Vts.Desktop.csproj
+++ b/src/Vts.Desktop/Vts.Desktop.csproj
@@ -577,6 +577,9 @@
     <Compile Include="..\Vts\MonteCarlo\Detectors\RofXAndYDetector.cs">
       <Link>MonteCarlo\Detectors\RofXAndYDetector.cs</Link>
     </Compile>
+    <Compile Include="..\Vts\MonteCarlo\Detectors\SpecularDetector.cs">
+      <Link>MonteCarlo\Detectors\SpecularDetector.cs</Link>
+    </Compile>
     <Compile Include="..\Vts\MonteCarlo\Detectors\TallyExtensionMethods.cs">
       <Link>MonteCarlo\Detectors\TallyExtensionMethods.cs</Link>
     </Compile>
